baserow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baserow
  labels:
    app: baserow
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: baserow
