apps-ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress-local
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: baserow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: baserow
            port:
              number: 80
  - host: n8n.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 80
  tls:
  - hosts:
    - baserow.local
    - n8n.local
    secretName: apps-tls-local-cert
