apps-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: baserow.maxime-lenne.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: baserow
            port:
              number: 80
  - host: n8n.maxime-lenne.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 80
  tls:
  - hosts:
    - baserow.maxime-lenne.fr
    - n8n.maxime-lenne.fr
    secretName: apps-tls-cert
