apps-ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: baserow.staging.maxime-lenne.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: baserow
            port:
              number: 80
  - host: n8n.staging.maxime-lenne.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 80
  tls:
  - hosts:
    - baserow.staging.maxime-lenne.fr
    - n8n.staging.maxime-lenne.fr
    secretName: apps-tls-staging-cert
